# Terra

./: .gitignore  .mcp.json  404.html  AIObservabilityPlan.md  CHANGELOG.md  CLAUDE.md  LICENSE  PRODUCTION_READINESS_AUDIT.md  Package.resolved  Package.swift  README.md  UNUSED_DATA_SOURCES.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt  terra-v1-rc-hardening-report.md  terra-v1-rc-production-readiness-plan.md
.github/workflows/: ci.yml
404/: index.html
Apps/: CLAUDE.md
Apps/TraceMacApp/: EULA.md  Info.plist  Licensing.md  Makefile  PrivacyPolicy.md  ReleaseChecklist.md  SigningAndNotarization.md  Updates.md
Benchmarks/TerraSDKBenchmarks/: main.swift
Docs/: API-INVENTORY.md  API-REF-AUDIT.md  API_Cookbook.md  API_V2_FLUENT_CALLSITE_SPEC.md  CONFIG-AUDIT.md  COOKBOOK-AUDIT.md  DOC-AUDIT.md  DOCC-AUDIT.md  DOCUMENTATION-ACCURACY-BASELINE.md  Front_Facing_API.md  Front_Facing_API_Examples.md  Integrations.md  Migration_Guide.md  Migration_v1_to_v2.md  ModelStatsEnhancementPlan.md  ModelStatsImplementationPlan.md  Profiler-Integration.md  RC_CHECKLIST.md  TERRA-FRAMEWORK-COMPREHENSIVE-ANALYSIS.md  TERRA_FEATURES.md  api-reference.md  cookbook.md  integrations.md  migration.md  terra-features.html
Docs/TelemetryConvention/: GOVERNANCE.md  terra-v1.md  terra-v1.schema.json
Docs/blog/: on-device-observability.md
Docs/plans/: 2026-02-23-extract-terraviewer-design.md  2026-02-23-extract-terraviewer.md  2026-03-01-api-v3-design.md  2026-03-01-api-v3-implementation.md  2026-03-01-phase3-lifecycle-hardening-design.md  2026-03-01-phase3-lifecycle-hardening.md  terra-android-plan.md  terra-remaining-work-prompt.md
Docs/reference/: frontfacing-api-rating-after.md  frontfacing-api-rating-before.md
Examples/Terra AutoInstrument/: main.swift
Examples/Terra Sample/: RecipeSnippets.swift  main.swift
Plans/: ProductionReadinessPlan.md  TraceCLIPlan.md  TraceMacAppFeaturesABCPlan.md  TraceMacAppPlan.md
Plans/Tasks/: CI_License_Docs.md  CoreFixes.md  ProductionReadiness_ArtifactsIgnore.md  ProductionReadiness_CIPin.md  ProductionReadiness_FormatterSafety.md  ProductionReadiness_READMEURLs.md  ProductionReadiness_Review.md  ProductionReadiness_Tests.md  Tests.md  TraceCLI_CLIUX.md  TraceCLI_OTLPDecode.md  TraceCLI_Receiver.md  TraceCLI_Rendering.md  TraceCLI_Tests.md  TraceMacAppFeaturesABC_ContextDiscovery.md  TraceMacAppFeaturesABC_FeatureA_Implementation.md  TraceMacAppFeaturesABC_FeatureA_Tests.md  TraceMacAppFeaturesABC_FeatureB_Implementation.md  TraceMacAppFeaturesABC_FeatureB_Tests.md  TraceMacAppFeaturesABC_FeatureC_Implementation.md  TraceMacAppFeaturesABC_FeatureC_Tests.md  TraceMacAppFeaturesABC_IntegrationVerification.md  TraceMacApp_AppTarget.md  TraceMacApp_ContextSurvey.md  TraceMacApp_DataLayer.md  TraceMacApp_Docs.md  TraceMacApp_PolishUI.md  TraceMacApp_RendererIntegration.md  TraceMacApp_Tests.md  TraceMacApp_UIArchitecture.md
Plans/TraceMacAppTasks/: I1_PersistenceImplementation.md  I2_ModelImplementation.md  I3_ViewModelImplementation.md  (+5 more)
Scripts/: build-libtera-android.sh  build-libtera-xcframework.sh  public_symbol_count.py  publish_pages_with_docc.sh  rc_hardening.sh  validate-tests.sh  validate_no_legacy_refs.sh
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
docc/: metadata.json
tasks/: audit.md  implementation-plan.md  lessons.md  todo.md
terra-android/: README.md  build.gradle.kts  settings.gradle.kts
terra-cpp/: CMakeLists.txt
terra-cpp/examples/: basic.cpp
terra-cpp/include/: terra.hpp
terra-python/: terra.py
terra-ros2/: CMakeLists.txt  package.xml
terra-ros2/src/: terra_ros2_bridge_core.cpp  terra_ros2_bridge_core.hpp  terra_ros2_node.cpp
terra-ros2/tests/: terra_ros2_bridge_core_test.cpp
terra-rust/: Cargo.toml  build.rs
terra-rust/examples/: basic.rs
terra-rust/src/: error.rs  ffi.rs  lib.rs
terra-rust/tests/: integration_test.rs
website/: next.config.ts  package-lock.json  package.json
zig-core/: .gitignore  build.zig  build.zig.zon
(+1046 files in other folders)
