<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>terra_ros2</name>
  <version>0.1.0</version>
  <description>Terra observability bridge for ROS 2 — forwards OTLP trace spans and publishes aggregated metrics.</description>
  <maintainer email="chris@terra.dev">Chris Karani</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>libcurl</depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
